--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,13 @@
 
 body {
   font-family: 'PT Sans', sans-serif;
+  height: 100%;
+  min-height: 100vh;
+}
+html {
+  height: 100%;
+  min-height: 100vh;
+  
 }
 
 @layer base {
